add documentation for ACM extension

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,4 +1,5 @@
-* xref:amazon-apigatewaymanagementapi [Api Gateway Management Api]
+* xref:amazon-acm.adoc[ACM]
+* xref:amazon-apigatewaymanagementapi.adoc[Api Gateway Management Api]
 * xref:amazon-cloudwatch.adoc[CloudWatch]
 * xref:amazon-cloudwatchlogs.adoc[CloudWatch Logs]
 * xref:amazon-cognitouserpools.adoc[Cognito User Pools]
