--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -8,6 +8,7 @@
 * xref:amazon-elasticloadbalancing.adoc[Elastic Load Balancing]
 * xref:amazon-elasticloadbalancingv2.adoc[Elastic Load Balancing v2]
 * xref:amazon-eventbridge.adoc[EventBridge]
+* xref:amazon-scheduler.adoc[EventBridge Scheduler]
 * xref:amazon-iam.adoc[IAM]
 * xref:amazon-inspector.adoc[Inspector]
 * xref:amazon-inspector2.adoc[Inspector2]
