chore: add missing quarkus extension description files

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,5 +1,7 @@
 * xref:amazon-acm.adoc[ACM]
 * xref:amazon-apigatewaymanagementapi.adoc[Api Gateway Management Api]
+* xref:amazon-bedrock.adoc[Bedrock]
+* xref:amazon-bedrockruntime.adoc[Bedrock Runtime]
 * xref:amazon-cloudwatch.adoc[CloudWatch]
 * xref:amazon-cloudwatchlogs.adoc[CloudWatch Logs]
 * xref:amazon-cognitouserpools.adoc[Cognito User Pools]
