--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -21,13 +21,17 @@
 * xref:amazon-neptune.adoc[Neptune]
 * xref:amazon-paymentcryptography.adoc[Payment Cryptography]
 * xref:amazon-paymentcryptographydata.adoc[Payment Cryptography Data]
+* xref:amazon-rds.adoc[RDS]
 * xref:amazon-s3.adoc[S3]
 * xref:amazon-secretsmanager.adoc[Secret Manager]
 * xref:amazon-ses.adoc[SES]
+* xref:amazon-sesv2.adoc[SESv2]
 * xref:amazon-sfn.adoc[SFN]
 * xref:amazon-sns.adoc[SNS]
 * xref:amazon-sqs.adoc[SQS]
 * xref:amazon-ssm.adoc[SSM]
+* xref:amazon-sso.adoc[SSO]
+* xref:amazon-ssooidc.adoc[SSOOIDC]
 * xref:amazon-sts.adoc[STS]
 * xref:dev-services.adoc[Dev Services for Amazon Services]
 * xref:opentelemetry.adoc[OpenTelemetry for Amazon Services]
