docs: add missing pages for rdsdata
closes: #1720

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -22,6 +22,7 @@
 * xref:amazon-paymentcryptography.adoc[Payment Cryptography]
 * xref:amazon-paymentcryptographydata.adoc[Payment Cryptography Data]
 * xref:amazon-rds.adoc[RDS]
+* xref:amazon-rdsdata.adoc[RDS Data]
 * xref:amazon-s3.adoc[S3]
 * xref:amazon-secretsmanager.adoc[Secret Manager]
 * xref:amazon-ses.adoc[SES]
