--- a/docs/modules/ROOT/pages/amazon-configure-clients.adoc
+++ b/docs/modules/ROOT/pages/amazon-configure-clients.adoc
@@ -63,7 +63,7 @@ To enable the asynchronous client, we also need to add the Netty HTTP client dep
 If you want to use the AWS CRT-based HTTP client instead, configure it as follows:
 [source,properties, subs=attributes]
 ----
-quarkus.acm.async-client.type=aws-crt
+quarkus.{service-name}.async-client.type=aws-crt
 ----
 
 And add the following dependency to the application `pom.xml`:
@@ -90,7 +90,7 @@ quarkus.{service-name}.aws.credentials.static-provider.secret-access-key=test-se
 <2> Localstack defaults to `us-east-1`
 <3> The `static` credentials provider lets you set the `access-key-id` and `secret-access-key` directly
 
-If you want to work with an AWS account, you can simply remove or comment out all Amazon ACM related properties. By default, the ACM client extension will use the `default` credentials provider chain that looks for credentials in this order:
+If you want to work with an AWS account, you can simply remove or comment out all Amazon {service-name-uppercase} related properties. By default, the {service-name-uppercase} client extension will use the `default` credentials provider chain that looks for credentials in this order:
 
 include::./amazon-credentials.adoc[]
 
